Bug 1606859 - Hold mRecursiveMutex while calling Axis::StartTouch(). r=tnikkel

StartTouch() sets axis fields like mAxisLocked which can be read by the
sampler thread by GetVelocity().

Differential Revision: https://phabricator.services.mozilla.com/D58658

--HG--
extra : moz-landing-system : lando