gfx/layers/apz/src/AsyncPanZoomController.h
@@ -843,6 +843,11 @@ class AsyncPanZoomController {
   void TrackTouch(const MultiTouchInput& aEvent);
 
   /**
+   * Register the start of a touch or pan gesture at the given position and time.
+   */
+  void StartTouch(const ParentLayerPoint& aPoint, uint32_t aTime);
+
+  /**
    * Utility function to send updated FrameMetrics to Gecko so that it can paint
    * the displayport area. Calls into GeckoContentController to do the actual
    * work. This call will use the current metrics. If this function is called
